--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
       </div>
       <div class="weather">
         <img src="/images/rain.png" alt="weather-image" class="weather-icon" />
-        <h1 class="temp">50°c</h1>
+        <h1 class="temp">20°c</h1>
         <h2 class="city">Kampala</h2>
         <div class="details">
           <div class="col">
             <img src="images/humidity.png" alt="" />
             <div>
               <p class="humidity">50%</p>
-              <p>humidity</p>
+              <p class="weather-type">humidity</p>
             </div>
           </div>
           <div class="col">
             <img src="images/wind.png" alt="" />
             <div>
               <p class="wind">20 km/hr</p>
-              <p>wind</p>
+              <p class="weather-type">wind</p>
             </div>
           </div>
         </div>
